# codex-fantasy-blogger

./: README.md  pyproject.toml
content/: index.html
content/posts/: _posts.json  faab-top-adds-2025-10-06.md
src/codex_fantasy_blogger/: __init__.py  cli.py  config.py  models.py  orchestrator.py
src/codex_fantasy_blogger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/codex_fantasy_blogger/agents/: __init__.py  base.py  player_research_agent.py  top_adds_agent.py  transaction_expert_agent.py  writer_agent.py
src/codex_fantasy_blogger/blog/: __init__.py  publisher.py
src/codex_fantasy_blogger/blog/templates/: index.html.j2  post.md.j2
src/codex_fantasy_blogger/services/: __init__.py  llm.py  news_client.py  sleeper_client.py
src/codex_fantasy_blogger/utils/: __init__.py  logging.py
