[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-fantasy-blogger"
version = "0.1.0"
description = "Agentic workflow to generate fantasy football FAAB acquisition blog posts"
authors = [
  {name = "Codex Agent"}
]
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "typer>=0.12",
  "jinja2>=3.1",
  "python-dateutil>=2.8",
  "pydantic>=2.7",
  "feedparser>=6.0"
]

[project.optional-dependencies]
llm = [
  "openai>=1.0"
]

[project.scripts]
faab-blogger = "codex_fantasy_blogger.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
